samples/_failures_safe/1761506863_7de112_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a30d5dd9.c: In function ‘main’:
./samples/SAFE/__tmp_a30d5dd9.c:155:5: error: expected expression at end of input
  155 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_a30d5dd9.c:155:5: error: expected declaration or statement at end of input
